--- a/index.html
+++ b/index.html
@@ -80,14 +80,10 @@
                     Parabéns para nós...
                 </p>
                 <p class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos est pariatur rerum, maxime
-                    facere quia qui nam animi quo magni. Recusandae impedit sequi reiciendis optio quas, ut libero
-                    ad magni.
+                    Elisangela ou Hellem… ou melhor MEU AMOR! Não sei como expressar em palavras o quanto você tem me feito bem, o quanto sou grato por você ter entrado na minha vida, DO NADA! Kkkk mas é assim mesmo as coisas boas geralmente levam tempo pra vir, mas você veio, e veio com TUDO! Os dois pés e um trator pra invadir o coração desse homem o qual tem feito muito feliz, como Ubiracy mesmo diz “ta sorridente o menino”, você é e não vou me cansar de dizer, uma mulher incrível que apesar da idade tem dentro de si uma personalidade forte o que me encanta ao mesmo tempo que tens uma maturidade que me assusta, você é muito nova mulher pra ter essa mente de “velha”.
                 </p>
                 <p class="text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos est pariatur rerum, maxime
-                    facere quia qui nam animi quo magni. Recusandae impedit sequi reiciendis optio quas, ut libero
-                    ad magni.
+                    No fim das contas a cada dia que passa eu estou mais apaixonado por você, como disse aquele vídeo me confirmou muitas coisas, assim como suas atitudes, espero saber dar valor, desejo a deus sabedoria para guiar nosso relacionamento junta a você para um futuro próspero e feliz, onde possamos nos orgulhar do que conquistamos e onde chegamos JUNTOS! pois és minha companheira, obrigado por tudo meu amor, pelos conselhos, pelos carinhos, pelos mimos, pelos cuidados e mais ainda pela complucidade.
                 </p>
                 <p class="text-love">
                     Te amo!
