--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 </head>
 
 <body>
+
+    <div id="bar">
+        <div id="bar-progress" class="bar-0"></div>
+    </div>
     <div id="falha">
         <div class="falha-div">
             <img src="https://i.pinimg.com/originals/ef/2a/b5/ef2ab59c4b6b7417dd33182f3606136e.gif" alt="">
@@ -35,15 +39,15 @@
             <div class="container-questions">
                 <div>
                     <input type="radio" name="resp" id="alternative_1">
-                    <label id="question_1" for="alternative_1"></label>
+                    <label id="question_1" for="alternative_1" class="font-label"></label>
                 </div>
                 <div>
                     <input type="radio" name="resp" id="alternative_2">
-                    <label id="question_2" for="alternative_2"></label>
+                    <label id="question_2" for="alternative_2" class="font-label"></label>
                 </div>
                 <div>
                     <input type="radio" name="resp" id="alternative_3">
-                    <label id="question_3" for="alternative_3"></label>
+                    <label id="question_3" for="alternative_3" class="font-label"></label>
                 </div>
             </div>
             <div class="container-button-resp">
@@ -93,7 +97,7 @@
     </div>
 
 
-    <button id="botao-do-amor" class="quiz-show">BOTÃO DO AMOR</button>
+    <button id="botao-do-amor" class="quiz-show">Iniciar QUIZ</button>
 
 
 </body>
